# smart-analisis-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  README.md  main.py  pyproject.toml
app/agent/: graph.py  prompts.py  select_llm.py  tools.py
app/api/: routes.py  schemas.py
app/core/: config.py
app/services/: agg_metric_service.py  compare_segments_service.py  explain_trend_service.py  find_zones_criteria.py  report.py  top_zones_service.py  zome_trend_service.py
frontend/: .env.local.example  Dockerfile  README.md  app.py  next.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/report/: route.ts
frontend/app/report/: page.tsx
frontend/components/: ChartRenderer.tsx  ChatApp.tsx  ChatInput.tsx  ChatWindow.tsx  MessageBubble.tsx  Sidebar.tsx  chat.py  message.py  sidebar.py
frontend/services/: api.py
frontend/styles/: main.css
notebooks/: 00_eda.ipynb
