[project]
name = "smart-analisis-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.13",
    "langchain-google-genai>=4.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pydantic-settings>=2.13.1",
    "seaborn>=0.13.2",
]
