[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.0",
    "langchain-core>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-google-genai>=4.0.0",
    "langchain-ollama>=0.1.0",
    "langgraph>=0.2.0",
    "openpyxl>=3.1.0",
    "tabulate>=0.9.0",
    "markdown>=3.10.2",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "xhtml2pdf>=0.2.17",
    "matplotlib>=3.7.0",
]
